--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,14 @@ footer .nav .nav-item .nav-link, footer p{
 .copy-btn:hover, .login-btn:hover{
   border-color: rgb(182, 182, 182) !important;
 }
-
+#pass-error{
+  display: none;
+  color: red;
+  margin: 0;
+}
+#acc-success{
+  display: none;
+}
 
 @media (max-width: 992px){
   .blue-btn{
