--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ body{
 .nav-btn-cont{
   width: 100%;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 #loggedin-nav{
