--- a/src/App.css
+++ b/src/App.css
@@ -1,82 +1,95 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-:root{
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+:root {
   --primaryColor: #072541;
   --secondaryColor: #00417e;
 }
-body{
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  appearance: unset;
+  -moz-appearance: textfield;
+}
+body {
   /* font-family: 'Poppins', sans-serif; */
   font-family: "Inter", sans-serif;
 }
 
-.sub-head{
+.sub-head {
   color: rgb(101, 101, 101);
 }
 
-.blue-btn{
-  background-color:#003a70;
+.blue-btn {
+  background-color: #003a70;
   color: white;
   border: 2px solid #003a70;
   border-radius: 50px;
   padding: 7px 30px;
   font-weight: 500;
 }
-.blue-btn:hover{
-  background-color:var(--primaryColor) ;
+.blue-btn:hover {
+  background-color: var(--primaryColor);
   border: 2px solid var(--primaryColor);
 }
 
-.bg-body-tertiary{
+.bg-body-tertiary {
   background-color: transparent !important;
 }
 
-.accordion-button{
+.accordion-button {
   font-weight: 500 !important;
 }
 
 /* Navbar */
-.navbar-brand{
+.navbar-brand {
   margin: 0;
 }
-.navbar-expand-lg .navbar-nav .nav-link{
+.navbar-expand-lg .navbar-nav .nav-link {
   color: black;
   font-weight: 500;
   border-radius: 50px;
   padding: 7px 15px;
 }
-.navbar-expand-lg .navbar-nav .nav-link:hover{
+.navbar-expand-lg .navbar-nav .nav-link:hover {
   background-color: rgb(244, 244, 244);
 }
-.navbar-toggler:focus{
+.navbar-toggler:focus {
   box-shadow: none;
 }
-.dropdown-menu{
+.dropdown-menu {
   padding: 0;
   overflow: hidden;
 }
-.dropdown-divider{
+.dropdown-divider {
   margin: 0;
 }
-.dropdown-item{
+.dropdown-item {
   padding: 7px 15px;
   font-weight: 500;
   text-align: center;
 }
-.dropdown-item.active, .dropdown-item:active{
+.dropdown-item.active,
+.dropdown-item:active {
   background-color: var(--secondaryColor);
 }
 
-.nav-btn-cont{
+.nav-btn-cont {
   width: 100%;
   display: flex;
   justify-content: flex-end;
 }
 
-#loggedin-nav{
+#loggedin-nav {
   display: none;
 }
 
 /* why section */
-.why-card{
+.why-card {
   border: 1px solid #005bb0;
   border-radius: 15px;
   color: white;
@@ -86,70 +99,79 @@ body{
   /* margin-bottom: 1rem; */
   height: 100%;
 }
-.why-card h5{
+.why-card h5 {
   margin: 1rem 0;
 }
-.why-img-div{
+.why-img-div {
   height: 100px;
 }
-.why-img-div img{
+.why-img-div img {
   height: 100%;
   width: 100%;
   object-fit: contain;
 }
 
 /* Footer */
-footer{
+footer {
   background-color: var(--primaryColor);
 }
-footer .nav{
+footer .nav {
   border-color: #00417e !important;
 }
 
-footer .nav .nav-item .nav-link, footer p{
-  color: white !important; 
+footer .nav .nav-item .nav-link,
+footer p {
+  color: white !important;
 }
 
 /* Login page */
-.form-control{
+.form-control {
   border: 1px solid rgb(185, 185, 185) !important;
 }
 
-.copy-btn{
+.copy-btn {
   font-size: smaller;
   top: 5px;
   right: 5px;
 }
-.copy-btn:hover, .login-btn:hover{
+.copy-btn:hover,
+.login-btn:hover {
   border-color: rgb(198, 198, 198) !important;
 }
 
-#id_exist, #pass-validate, #pass-error, #zero-error{
+#id_exist,
+#pass-validate,
+#pass-error,
+#zero-error {
   display: none;
   color: red;
   margin: 0;
 }
-#acc-success, #balance_error, #WA-error, #transfer-success, #WA-same, #change-pass{
+#acc-success,
+#balance_error,
+#WA-error,
+#transfer-success,
+#WA-same,
+#change-pass {
   display: none;
 }
 
-@media (max-width: 992px){
-  .blue-btn{
+@media (max-width: 992px) {
+  .blue-btn {
     text-align: center;
   }
-  .nav-link{
+  .nav-link {
     text-align: center;
   }
   .nav-btn-cont {
     flex-direction: column;
   }
 }
-@media (max-width: 768px){
-  .hero-sec{
+@media (max-width: 768px) {
+  .hero-sec {
     flex-direction: column-reverse;
   }
-  .blue-btn{
+  .blue-btn {
     width: 100%;
   }
-
 }
