--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -25,7 +25,7 @@ body {
 }
 
 .blue-btn {
-  background-color: #003a70;
+  background-color: var(--primaryColor);
   color: white;
   border: 0;
   border-radius: 50px;
@@ -56,9 +56,10 @@ body {
   font-weight: 500;
   border-radius: 50px;
   padding: 7px 15px;
-}
-.navbar-expand-lg .navbar-nav .nav-link:hover {
-  background-color: rgb(244, 244, 244);
+  width: fit-content;
+  &:hover {
+    background-color: rgb(244, 244, 244);
+  }
 }
 .navbar-toggler:focus {
   box-shadow: none;
@@ -108,19 +109,18 @@ body {
 /* Footer */
 footer {
   background-color: var(--primaryColor);
-}
-footer .nav {
-  border-color: #00417e !important;
-}
-
-footer .nav .nav-item .nav-link,
-footer p {
-  color: white !important;
+  p {
+    color: whitesmoke;
+    font-weight: 300;
+    font-size: 0.8rem;
+  }
 }
 
-/* Login page */
 .form-control {
-  border: 1px solid rgb(185, 185, 185) !important;
+  padding: 5px 10px !important;
+  font-size: 0.9rem;
+  border: 1px solid rgb(170, 170, 170) !important;
+  box-shadow: none !important;
 }
 
 .copy-btn {
@@ -151,6 +151,17 @@ footer p {
 }
 
 /* Notification */
+.notification_opt {
+  position: relative;
+}
+.notify_dot {
+  position: absolute;
+  right: 5px;
+  background-color: red;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+}
 .dropdown-menu {
   border: 0;
   background-color: white;
@@ -175,7 +186,7 @@ footer p {
   border: 0;
   padding: 0.3rem 1.5rem;
   border-radius: 0.5rem;
-  background-color: rgb(255, 0, 60);
+  background-color: rgb(239, 0, 24);
   color: white;
   &:hover {
     background-color: rgb(244, 2, 54);
