--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
-  --primaryColor: #113b6c;
-  --secondaryColor: #00417e;
+  --primaryColor: #003566;
+  --secondaryColor: #001d3d;
 }
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -24,16 +24,13 @@ body {
   color: rgb(101, 101, 101);
 }
 
-.blue-btn {
-  background-color: var(--primaryColor);
+.primaryBtn {
+  background-color: black;
   color: white;
   border: 0;
-  border-radius: 50px;
+  border-radius: 7px;
   padding: 7px 30px;
-  font-weight: 500;
-}
-.blue-btn:hover {
-  background-color: var(--primaryColor);
+  font-size: 0.9rem;
 }
 
 .bg-body-tertiary {
@@ -45,6 +42,10 @@ body {
 }
 
 /* Navbar */
+nav {
+  position: sticky !important;
+  z-index: 10 !important;
+}
 .navbar-toggler {
   border: 0;
 }
@@ -82,8 +83,12 @@ body {
 }
 
 .alert {
+  color: black;
+  background-color: white;
+  border-color: gray;
   font-size: 0.9rem;
   padding: 0.5rem;
+  margin: 0;
   ul {
     margin: 0;
   }
@@ -99,6 +104,36 @@ body {
   display: none;
 }
 
+.nav-tabs {
+  border: 0;
+  background-color: whitesmoke;
+  padding: 0.25rem;
+  border-radius: 0.4rem;
+  .nav-item {
+    width: 50%;
+  }
+  .nav-link {
+    color: rgb(113, 113, 122) !important;
+    border: 0;
+    font-weight: 500;
+    padding: 0.25rem 1rem;
+    font-size: 0.88rem;
+    border-radius: 0.3rem;
+    width: 100%;
+    height: 100%;
+  }
+  .nav-link.active {
+    color: black !important;
+    border: 0;
+    font-weight: 500;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+    padding: 0.25rem 1rem;
+    font-size: 0.88rem;
+    border-radius: 0.3rem;
+    width: 100%;
+  }
+}
+
 .nCard {
   padding: 1.5rem;
   border-radius: 0.5rem;
@@ -106,9 +141,45 @@ body {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
+.why_sec {
+  background: rgb(26, 64, 95);
+  background: linear-gradient(
+    120deg,
+    rgba(26, 64, 95, 1) 0%,
+    rgba(0, 102, 196, 1) 0%,
+    rgba(0, 29, 61, 1) 100%
+  );
+}
+
+.subheading {
+  color: #82828a;
+  font-size: 0.87rem;
+}
+
+.eye_btn {
+  position: absolute;
+  right: 3px;
+  top: 1px;
+  border: 0;
+  border-radius: 0.3rem;
+  width: 32px;
+  height: 32px;
+  padding: 5px;
+  background-color: white;
+  &:hover {
+    background-color: whitesmoke;
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+  }
+}
+
 /* Footer */
 footer {
-  background-color: var(--primaryColor);
+  background-color: var(--secondaryColor);
   p {
     color: whitesmoke;
     font-weight: 300;
@@ -117,9 +188,9 @@ footer {
 }
 
 .form-control {
-  padding: 5px 10px !important;
+  // padding: 5px 10px !important;
   font-size: 0.9rem;
-  border: 1px solid rgb(170, 170, 170) !important;
+  border: 1px solid rgb(192, 192, 192) !important;
   box-shadow: none !important;
 }
 
@@ -197,7 +268,7 @@ footer {
   border-radius: 0.5rem;
   //   border-top: 1px solid rgb(197, 197, 197);
   &:hover {
-    background-color: rgb(233, 241, 255);
+    background-color: rgb(232, 244, 255);
   }
   h6 {
     margin: 0;
@@ -255,7 +326,7 @@ footer {
 }
 
 @media (max-width: 992px) {
-  .blue-btn {
+  .primaryBtn {
     text-align: center;
   }
   .nav-link {
@@ -269,7 +340,7 @@ footer {
   .hero-sec {
     flex-direction: column-reverse;
   }
-  .blue-btn {
+  .primaryBtn {
     width: 100%;
   }
   .tHeader {
