--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -45,6 +45,21 @@ body {
 nav {
   position: sticky !important;
   z-index: 10 !important;
+  .nav_icon {
+    margin-right: 1rem;
+    width: 40px;
+    height: 40px;
+    font-size: 1.6rem;
+    aspect-ratio: 1/1;
+    border-radius: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
+    &:hover {
+      background-color: whitesmoke;
+    }
+  }
 }
 .navbar-toggler {
   border: 0;
@@ -55,8 +70,8 @@ nav {
 .navbar-expand-lg .navbar-nav .nav-link {
   color: black;
   font-weight: 500;
-  border-radius: 50px;
-  padding: 7px 15px;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
   width: fit-content;
   &:hover {
     background-color: rgb(244, 244, 244);
@@ -166,9 +181,6 @@ nav {
   height: 32px;
   padding: 5px;
   background-color: white;
-  &:hover {
-    background-color: whitesmoke;
-  }
   img {
     width: 100%;
     height: 100%;
@@ -221,16 +233,21 @@ footer {
   display: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* Notification */
 .notification_opt {
   position: relative;
 }
 .notify_dot {
   position: absolute;
-  right: 5px;
+  right: 20px;
+  top: 5px;
   background-color: red;
-  width: 8px;
-  height: 8px;
+  width: 7px;
+  height: 7px;
   border-radius: 50%;
 }
 .dropdown-menu {
@@ -257,10 +274,11 @@ footer {
   border: 0;
   padding: 0.3rem 1.5rem;
   border-radius: 0.5rem;
-  background-color: rgb(239, 0, 24);
+  font-size: 0.9rem;
+  background-color: rgb(239, 68, 68);
   color: white;
   &:hover {
-    background-color: rgb(244, 2, 54);
+    background-color: rgb(239, 68, 68);
   }
 }
 .notification {
@@ -312,7 +330,8 @@ footer {
     // box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   }
 }
-.transaction_table {
+.transaction_table,
+.admin_table {
   font-size: 0.9rem;
   th {
     font-weight: 400 !important;
@@ -322,6 +341,89 @@ footer {
   td {
     text-wrap: nowrap;
     padding: 0.5rem 1rem;
+  }
+}
+
+// Admin pages
+.admin_wrapper {
+  background-color: #06141b;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .login_card {
+    background-color: #11212d;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+    width: 100%;
+    max-width: 320px;
+    display: flex;
+    flex-direction: column;
+    .eye_btn {
+      background-color: #253745;
+      color: #ccd0cf;
+    }
+    h5 {
+      color: #ccd0cf;
+    }
+    img {
+      width: 80px;
+      height: 80px;
+      object-fit: contain;
+      margin: 0 auto;
+    }
+    label,
+    h6 {
+      color: #9ba8ab;
+    }
+    label {
+      font-size: 0.9rem;
+    }
+    .form-control {
+      background-color: #253745;
+      border: 1px solid #4a5c6a !important;
+      color: #ccd0cf;
+    }
+    .alert {
+      background-color: #253745;
+      color: #ccd0cf !important;
+      border: none;
+    }
+  }
+}
+
+.admin_panel {
+  .header {
+    p {
+      font-size: 0.9rem;
+      color: #566b7b;
+    }
+  }
+  .form-control {
+    width: fit-content;
+  }
+  .more_btn {
+    border: 0;
+    background-color: white;
+    border-radius: 0.2rem;
+    &:hover {
+      background-color: whitesmoke;
+    }
+    img {
+      width: 20px;
+      height: 20px;
+    }
+  }
+}
+
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .material-symbols-rounded {
+    margin-right: 0.1rem;
+    font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 18;
   }
 }
 
