--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -394,6 +394,27 @@ a {
 }
 
 .admin_panel {
+  .dropdown-menu {
+    box-shadow: none;
+    border: 1px solid #253745;
+  }
+  .dropdown-item {
+    font-size: 0.88rem;
+    font-weight: 400;
+    text-align: start;
+    background-color: #11212d;
+    color: #ccd0cf;
+    display: flex;
+    align-items: center;
+    .material-symbols-outlined {
+      font-size: 1.3rem;
+      margin-right: 0.4rem;
+      font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 30;
+    }
+    &:hover {
+      background-color: #253745;
+    }
+  }
   .navbar {
     background-color: #11212d !important;
     .navbar-brand {
@@ -412,6 +433,9 @@ a {
         color: #ccd0cf;
       }
     }
+    .admin_table {
+      margin-bottom: 200px;
+    }
     .admin_table th {
       background-color: transparent;
       color: #9ba8ab;
@@ -423,6 +447,7 @@ a {
         color: #ccd0cf;
       }
       .form-control {
+        width: 300px;
         background-color: #253745;
         border-color: #4a5c6a !important;
         color: #ccd0cf;
@@ -438,9 +463,7 @@ a {
       color: #566b7b;
     }
   }
-  .form-control {
-    width: fit-content;
-  }
+
   .more_btn {
     border: 0;
     background-color: white;
@@ -488,5 +511,8 @@ button {
     .form-control {
       width: 100% !important;
     }
+  }
+  .admin_panel .body .nCard .form-control {
+    width: 100%;
   }
 }
