--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -19,6 +19,15 @@ body {
   font-family: "Inter", sans-serif;
   color: black;
 }
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .material-symbols-rounded {
+    margin-right: 0.2rem;
+    font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 18;
+  }
+}
 
 .sub-head {
   color: rgb(101, 101, 101);
@@ -45,6 +54,15 @@ body {
 nav {
   position: sticky !important;
   z-index: 10 !important;
+  .nav_avatar {
+    border: 0;
+    width: 35px;
+    min-width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: whitesmoke;
+    color: rgb(65, 65, 65);
+  }
   .nav_icon {
     margin-right: 1rem;
     width: 40px;
@@ -243,7 +261,7 @@ a {
 }
 .notify_dot {
   position: absolute;
-  right: 20px;
+  right: 13px;
   top: 5px;
   background-color: red;
   width: 7px;
@@ -397,22 +415,22 @@ a {
   .dropdown-menu {
     box-shadow: none;
     border: 1px solid #253745;
-  }
-  .dropdown-item {
-    font-size: 0.88rem;
-    font-weight: 400;
-    text-align: start;
-    background-color: #11212d;
-    color: #ccd0cf;
-    display: flex;
-    align-items: center;
-    .material-symbols-outlined {
-      font-size: 1.3rem;
-      margin-right: 0.4rem;
-      font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 30;
-    }
-    &:hover {
-      background-color: #253745;
+    .dropdown-item {
+      font-size: 0.88rem;
+      font-weight: 400;
+      text-align: start;
+      background-color: #11212d;
+      color: #ccd0cf;
+      display: flex;
+      align-items: center;
+      .material-symbols-outlined {
+        font-size: 1.3rem;
+        margin-right: 0.4rem;
+        font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 30;
+      }
+      &:hover {
+        background-color: #253745;
+      }
     }
   }
   .navbar {
@@ -424,6 +442,24 @@ a {
   .body {
     background-color: #06141b;
     height: 100vh;
+    .more_btn {
+      border: 0;
+      background-color: white;
+      border-radius: 0.2rem;
+      &:hover {
+        background-color: whitesmoke;
+      }
+      img {
+        width: 20px;
+        height: 20px;
+      }
+    }
+    .header {
+      p {
+        font-size: 0.9rem;
+        color: #566b7b;
+      }
+    }
     .transaction_table td,
     .admin_table td {
       background-color: transparent;
@@ -457,34 +493,43 @@ a {
       }
     }
   }
-  .header {
-    p {
-      font-size: 0.9rem;
-      color: #566b7b;
-    }
-  }
-
-  .more_btn {
+  .nav_avatar {
     border: 0;
-    background-color: white;
-    border-radius: 0.2rem;
-    &:hover {
-      background-color: whitesmoke;
-    }
-    img {
-      width: 20px;
-      height: 20px;
-    }
+    width: 35px;
+    min-width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: #253745;
+    color: #ccd0cf;
   }
 }
 
-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  .material-symbols-rounded {
-    margin-right: 0.1rem;
-    font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 18;
+.adminPanelModal {
+  .adminDetails {
+    text-align: center;
+    h5 {
+      margin-top: 0.5rem;
+      margin-bottom: 0;
+    }
+    p {
+      font-size: 0.9rem;
+      color: #9ba8ab;
+    }
+  }
+  .modal-content {
+    background-color: #11212d !important;
+    color: #ccd0cf;
+  }
+
+  .userDetails {
+    font-size: 0.9rem;
+    .label {
+      text-wrap: nowrap;
+      text-align: end;
+      padding-right: 1.5rem;
+      color: #9ba8ab;
+      // font-weight: 500;
+    }
   }
 }
 
@@ -499,6 +544,7 @@ button {
     flex-direction: column;
   }
 }
+
 @media (max-width: 768px) {
   .hero-sec {
     flex-direction: column-reverse;
