--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -518,17 +518,29 @@ a {
   }
   .modal-content {
     background-color: #11212d !important;
-    color: #ccd0cf;
+    color: #dfdfdf;
   }
 
+  .topBox {
+    text-align: center;
+    h6 {
+      margin-bottom: 0;
+    }
+    p {
+      font-size: 0.85rem;
+      color: #9ba8ab;
+    }
+  }
   .userDetails {
     font-size: 0.9rem;
-    .label {
-      text-wrap: nowrap;
-      text-align: end;
-      padding-right: 1.5rem;
-      color: #9ba8ab;
-      // font-weight: 500;
+    .dataBox {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 1rem;
+      text-align: center;
+      label {
+        color: #9ba8ab;
+      }
     }
   }
 }
